--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 			</div>
 			<div class="col-lg-4 footer-2">
 				<hr class="light" id="footer-top">
-				<h5>Our Hours</h5>
+				<h5>My e-Mail</h5>
 				<hr class="light">
 				<p>wachswoodworking@noahwach.de</p>
 			</div>
 			<div class="col-lg-4 footer-2">
 				<hr class="light" id="footer-top">
-				<h5>Hello</h5>
+				<h5>Coming from</h5>
 				<hr class="light">
 				<p>Heidelberg</p>
 			</div>
