--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container-fluid idbox" id="home">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 <div class="container-fluid">
-	<a class="navbar-brand" href="#"><img src="img/logog_final.png" class="img-logo"></a>
+	<a class="navbar-brand" href="#"><img src="img/Logogsmalltop.png" class="img-logo"></a>
 	<button class="navbar-toggler ml-auto dropdown-menu-right" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -49,7 +49,7 @@
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center header-text">
         <h1 class="font-weight-light">Wach's Woodworking</h1>
-        <p class="lead">Handmade masterpieces</p>
+        <p class="lead header-sub">Handmade masterpieces</p>
       </div>
     </div>
   </div>
@@ -144,7 +144,7 @@
 	</div>
 </div>
 
-<div class="container-fluid padding">
+<div class="container-fluid padding carousel-con">
 	<div class="row text-center padding">
 		<div class="col-lg-12 col-xl-6">
 			<div id="slides" class="carousel slide" data-ride="carousel">
