--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 			</div>
 			<div class="col-12 copyright-footer">
 				<hr class="light-100">
-				<h5>&copy; noahwach.com</h5>
+				<h5>&copy; noahwach.de</h5>
 			</div>
 		</div>
 	</div>
