--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 		<div class="col-12 social padding">
 			<a href="facebook.com"><i class="fab fa-facebook"></i></a>
 			<a href="facebook.com"><i class="fab fa-twitter"></i></a>
-			<a href="facebook.com"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.instagram.com/wachswoodworking/"><i class="fab fa-instagram"></i></a>
 			<a href="facebook.com"><i class="fab fa-youtube"></i></a>
 		</div>
 	</div>
