--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<hr>
 		<div class="col-12">
-			<p class="lead">Each piece is crafted with care and love to create woodwork of the upmost quality.</p>
+			<p class="lead display-5">Each piece is crafted with care and love to create woodwork of the upmost quality.</p>
 		</div>
 	</div>
 </div>
