--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 <div class="container-fluid padding idbox" id="welcome">
 	<div class="row welcome text-center">
 		<div class="col-12">
-			<h1 class="display-4">Every piece a unique masterpiece</h1>
+			<h1 class="display-4">About</h1>
 		</div>
 		<hr>
 		<div class="col-12">
-			<p class="lead display-5">Each piece is crafted with care and love to create woodwork of the upmost quality.</p>
+			<p class="lead display-5">Every piece a unique masterpiece and is crafted with care and love to create woodwork of the upmost quality.</p>
 		</div>
 	</div>
 </div>
