--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center header-text">
-        <h1 class="font-weight-light">Wach's Woodworking</h1>
+        <h1 class="font-weight-light" style="word-wrap:break-word">Wach's Woodworking</h1>
         <p class="lead header-sub">Handmade masterpieces</p>
       </div>
     </div>
