--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				</div>
 			</div>
 			<h1 class="carousel-under">Phone Stand</h1>
-			<p class="carousel-p">With fit hole for your charger</p>
+			<p class="carousel-p">With a hole to fit your charger</p>
 			<p class="carousel-price">Price: 39.99</p>
 			<a href="mailto:wachswoodworking@noahwach.de?&subject=I%20want%20to%20buy%20a%20Phone%20Stand" target="_blank"><button type="button" class="btn btn-outline-light btn-lg">Buy</button></a>
 		</div>
