minor spelling and wording

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<i class="fas fa-brush"></i>
 			<h3>Finish</h3>
-			<p>All products are coated with a finish to highlight the individuality.</p>
+			<p>All products are coated with a finish which makes them more resistant.</p>
 		</div>
 
 	</div>
@@ -139,7 +139,7 @@
 			<h1 class="display-4">My Products</h1>
 			<hr>
 
-			<p>If you want to buy a product, please send me an e-Mail, so we can get in Touch.</p>
+			<p>If you want to buy a product, please send me an e-Mail, so we can get in touch.</p>
 		</div>
 	</div>
 </div>
