--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			<p class="carousel-price">Price: 29.99€</p>
 			<a href="mailto:wachswoodworking@noahwach.de?&subject=I%20want%20to%20buy%20a%20Phone%20Stand" target="_blank"><button type="button" class="btn btn-outline-light btn-lg">Buy</button></a>
 		</div>
-		<div class="col-lg-12 col-xl-12">
+		<div class="col-lg-12 col-xl-6">
 			<div id="slides3" class="carousel slide" data-ride="carousel">
 				<ul class="carousel-indicators">
 					<li data-target="#slides3" data-slide-to="0"class="active"></li>
@@ -229,13 +229,43 @@
 		 			</div>
 				</div>
 			</div>
-			<h1 class="carousel-under-r">Ring</h1>
-		<p class="carousel-p-r">All common sizes</p>
-		<p class="carousel-price-r">Price: 14.99€</p>
+			<h1 class="carousel-under">Ring</h1>
+		<p class="carousel-p">All common sizes</p>
+		<p class="carousel-price">Price: 14.99€</p>
 
 			<a href="mailto:wachswoodworking@noahwach.de?&subject=I%20want%20to%20buy%20a%20Ring" target="_blank"><button type="button" class="btn btn-outline-light btn-lg">Buy</button></a>
 		</div>
+		<div class="col-lg-12 col-xl-6">
+			<div id="slides4" class="carousel slide" data-ride="carousel">
+				<ul class="carousel-indicators">
+					<li data-target="#slides4" data-slide-to="0"class="active"></li>
+					<li data-target="#slides4" data-slide-to="1"></li>
+					<li data-target="#slides4" data-slide-to="2"></li>
+				</ul>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+			 			<img src="img/Lamp/Lamp_1.JPG" class="rounded">
+						<div class="carousel-caption">
+			 			</div>
+		 			</div>
+					<div class="carousel-item">
+						<div class="d-flex align-items-center justify-content-center min-vh-100">
+							 <img src="img/Lamp/Lamp_2.JPG" class="rounded">
+						</div>
+		 			</div>
+		 			<div class="carousel-item">
+						<div class="d-flex align-items-center justify-content-center min-vh-100">
+			 				<img src="img/Lamp/Lamp_3.JPG" class="rounded">
+						</div>
+		 			</div>
+				</div>
+			</div>
+			<h1 class="carousel-under">Lamp</h1>
+		<p class="carousel-p">A wooden retro lamp</p>
+		<p class="carousel-price">Price: 39.99€</p>
 
+			<a href="mailto:wachswoodworking@noahwach.de?&subject=I%20want%20to%20buy%20a%20Lamp" target="_blank"><button type="button" class="btn btn-outline-light btn-lg">Buy</button></a>
+		</div>
 	</div>
 </div>
 
